included bg color for name of recipe

--- a/recipes/creamymushroomchicken.html
+++ b/recipes/creamymushroomchicken.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Creamy Mushroom Chicken</h1>
+    <h1 class="name">Creamy Mushroom Chicken</h1>
     <img src="./images/creamymushroomchicken.webp" alt="creamy mushroom chicken image" height="310" width="520">
     <h2>Description</h2>
     <p>This cream of mushroom chicken is a delicious chicken recipe the whole family will enjoy. You can serve it with white rice or potatoes if desired.</p>
