--- a/recipes/rosemarylemongrilledchicken.html
+++ b/recipes/rosemarylemongrilledchicken.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Rosemary Lemon Grilled Chicken</h1>
+    <h1 class="name">Rosemary Lemon Grilled Chicken</h1>
     <img src="./images/rosemarylemongrilledchicken.webp" alt="rosemary lemon grilled chicken image" height="310" width="520">
     <h2>Description</h2>
     <p>This simple, sensational marinade and sauce for grilled chicken is made with lemon, garlic, rosemary, and butter. Separate the marinade into thirds: 1/3 for marinating, 1/3 for basting, and 1/3 for topping.</p>
